# formatter

./: Cargo.toml  LICENSE  README.md  meme  out.md  patch  rust.toml
.github/workflows/: rust.yml
libs/m_lexer/: Cargo.toml
libs/m_lexer/src/: lib.rs
src/: commands.rs  core.rs  formatter.rs  highlight.rs  ir.rs  lexer.rs  lib.rs  main.rs  plugins.rs  stdx.rs  traits.rs  vec_map.rs
src/formatter/: classes.rs  cursor.rs  input.rs
src/ir/: lexed.rs  lexer.rs  profile.rs  world.rs
src/plugins/: braces.rs  bracket.rs  ident.rs  newline.rs  operators.rs  parentheses.rs  spaces.rs
tests/: block.md  comments.md  escapes.md  string  string.md  struct.md  ugly  ugly.md
tests/assets/: block.rs.expected  empty_function.glsl  empty_function.glsl.expected  escapes.rs.expected  hello_world.rs.expected  macros.rs  macros.rs.expected  meme.glsl  meme.glsl.expected  slice.rs  slice.rs.expected  struct.rs.expected  trait.rs.expected  use.rs.expected  vertex-shader-code.glsl  vertex-shader-code.glsl.expected  xd.glsl  xd.glsl.expected
tests/assets/formatter/: DreamBerd.expected  attribute.rs  attribute.rs.expected  binary-minus-without-space.rs.expected  binary-minus-without-space.rs.skip  block.rs  block.rs.expected  const-and-static.rs.expected  const-match-pat.rs.expected  const-match-pat.rs.skip  const_generics.rs  const_generics.rs.expected  deref-patterns.rs.expected  deref-patterns.rs.skip  dst-bad-deep.rs.expected  dst-bad-deep.rs.skip  dyn_star.rs.expected  dyn_star.rs.skip  empty_function.glsl.expected  enum.rs.expected  enum.rs.skip  escapes.rs.expected  macros.rs  (+37 more)
(+23 files in other folders)
