[package]
name = "formatter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "formatter"
path = "src/bin/formatter.rs"

[dependencies]
enum_dispatch = "0.3.12"
itertools = "0.11.0"
jwalk = "0.8.1"
m_lexer = { path = "libs/m_lexer" }
miette = "5.10.0"
serde = { version = "1.0.174", features = ["derive"] }
toml = "0.7.6"
urlencoding = "2.1.3"
wca = { git = "https://github.com/Wandalen/wTools.git", branch = "alpha" }
